# mondradiko

./: .gitattributes  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  TODO.md  example-config.toml  helloworld.wat  meson.build  style_check.sh
assets/: Asset.cc  Asset.h  AssetBundle.cc  AssetBundle.h  AssetBundleBuilder.cc  AssetBundleBuilder.h  AssetFile.h  AssetLump.cc  AssetLump.h  AssetRegistry.cc  AssetRegistry.h  AssetTypes.cc  AssetTypes.h  CMakeLists.txt
assets/common/: AssetTypes.cc  AssetTypes.h
assets/format/: AssetFile.h  AssetTypes.cc  AssetTypes.h  CMakeLists.txt  MaterialAsset.fbs  MaterialAsset.h  MeshAsset.fbs  MeshAsset.h  PrefabAsset.fbs  Registry.fbs  ScriptAsset.fbs  ScriptAsset.h  SerializedAsset.fbs  TextureAsset.fbs  TextureAsset.h  types.fbs
assets/loading/: AssetBundle.cc  AssetBundle.h  AssetLump.cc  AssetLump.h  ImmutableAsset.h
assets/saving/: AssetBundleBuilder.cc  AssetBundleBuilder.h  MutableAsset.h
bindings/: CMakeLists.txt  README.md  as_binding.py  codegen.py  cpp_binding.py  generate_binding.py  generate_class.py  generate_link_headers.py  generate_script_linker.py  script_linker.h  wasm_linker.py
bindings/components/: CMakeLists.txt  Transform.toml
bundler/: AssetBundleBuilder.cc  AssetBundleBuilder.h  Bundler.cc  Bundler.h  CMakeLists.txt  ConverterInterface.cc  ConverterInterface.h  PrefabBuilder.cc  PrefabBuilder.h  README.md  bundler_main.cc
bundler/prefab/: BinaryGltfConverter.cc  BinaryGltfConverter.h  GltfConverter.cc  GltfConverter.h  TextGltfConverter.cc  TextGltfConverter.h
bundler/script/: WasmConverter.cc  WasmConverter.h
client/: CMakeLists.txt  README.md  client_main.cc
converter/: AssetBundleBuilder.cc  AssetBundleBuilder.h  BundlerInterface.h  CMakeLists.txt  ConverterInterface.h  PrefabBuilder.cc  PrefabBuilder.h  README.md  ShapeConverter.cc  ShapeConverter.h  assimp_converter.cc  assimp_converter.h  convert_gltf.cc  convert_gltf.h  converter.h  stb_converter.cc  stb_converter.h  wasm_converter.cc  wasm_converter.h
converter/prefab/: BinaryGltfConverter.cc  BinaryGltfConverter.h  GltfConverter.cc  GltfConverter.h  PrefabBuilder.cc  PrefabBuilder.h  TextGltfConverter.cc  TextGltfConverter.h
converter/script/: WasmConverter.cc  WasmConverter.h
core/: CMakeLists.txt  README.md  build_config.h.in
core/assets/: Asset.cc  Asset.h  AssetHandle.h  AssetPool.h  MaterialAsset.cc  MaterialAsset.h  MeshAsset.cc  MeshAsset.h  PrefabAsset.cc  PrefabAsset.h  README.md  ScriptAsset.cc  ScriptAsset.h  ShapeAsset.cc  ShapeAsset.h  TextureAsset.cc  TextureAsset.h
core/audio/: README.md
core/avatars/: Avatar.cc  Avatar.h  README.md  SpectatorAvatar.cc  SpectatorAvatar.h
core/bindings/: CMakeLists.txt  script_linker.h
core/common/: README.md  api_headers.h  glm_headers.h  openxr_headers.h  openxr_validation.h  sdl2_headers.h  vulkan_headers.h  vulkan_validation.h  wasm_headers.h
core/components/: Component.h  InternalComponent.h  MeshRendererComponent.cc  MeshRendererComponent.h  PointLightComponent.cc  PointLightComponent.h  README.md  RelationshipComponent.cc  RelationshipComponent.h  RigidBodyComponent.cc  RigidBodyComponent.h  ScriptComponent.cc  ScriptComponent.h  ScriptableComponent.h  SynchronizedComponent.h  TransformComponent.cc  TransformComponent.h
core/cvars/: BoolCVar.h  CVarScope.cc  CVarScope.h  CVarValueInterface.h  EnumCVar.h  FileCVar.h  FloatCVar.h  README.md  StringCVar.h
core/displays/: Display.cc  Display.h  DisplayInterface.h  OpenXrDisplay.cc  OpenXrDisplay.h  OpenXrViewport.cc  OpenXrViewport.h  README.md  SdlDisplay.cc  SdlDisplay.h  SdlViewport.cc  SdlViewport.h  Viewport.cc  Viewport.h  ViewportInterface.h  openxr_validation.h
core/filesystem/: AssetBundle.cc  AssetBundle.h  AssetLump.cc  AssetLump.h  AssimpIOStream.cc  AssimpIOStream.h  AssimpIOSystem.cc  AssimpIOSystem.h  Filesystem.cc  Filesystem.h  README.md
core/gpu/: GpuBuffer.cc  GpuBuffer.h  GpuDescriptorPool.cc  GpuDescriptorPool.h  GpuDescriptorSet.cc  GpuDescriptorSet.h  GpuDescriptorSetLayout.cc  GpuDescriptorSetLayout.h  GpuImage.cc  GpuImage.h  GpuInstance.cc  GpuInstance.h  GpuPipeline.cc  GpuPipeline.h  GpuShader.cc  GpuShader.h  GpuVector.h  GraphicsState.cc  GraphicsState.h  README.md  vulkan_validation.h
core/jobs/: README.md
core/log/: AssimpLogStream.h  log.cc
core/network/: NetworkClient.cc  NetworkClient.h  NetworkServer.cc  NetworkServer.h  NetworkShared.cc  NetworkShared.h  README.md
core/physics/: Physics.cc  Physics.h  README.md
core/protocol/: CMakeLists.txt  ClientEvent.fbs  MeshRendererComponent.fbs  PointLightComponent.fbs  ScriptComponent.fbs  ScriptData.fbs  ServerEvent.fbs  TransformComponent.fbs  WorldEvent.fbs  example.fbs  types.fbs
core/renderer/: CompositePass.cc  CompositePass.h  DebugDraw.cc  DebugDraw.h  DebugDrawList.cc  DebugDrawList.h  MeshPass.cc  MeshPass.h  MeshPipeline.cc  MeshPipeline.h  OverlayPass.cc  OverlayPass.h  README.md  RenderPass.h  Renderer.cc  Renderer.h
core/scene/: Scene.cc  Scene.h
core/scripting/: ComponentScript.cc  ComponentScript.h  README.md  ScriptEnvironment.cc  ScriptEnvironment.h  ScriptInstance.cc  ScriptInstance.h  ScriptObject.h  UiScript.cc  UiScript.h
core/shaders/: CMakeLists.txt  README.md  composite.frag  composite.vert  debug.frag  debug.vert  glyph.frag  glyph.vert  mesh.frag  mesh.vert  mesh_depth.frag  mesh_depth.vert  mesh_forward.frag  mesh_forward.vert  panel.vert  ui_draw.frag  ui_draw.vert
core/shapes/: AabbShape.h  AnyShape.cc  AnyShape.h  FrustumShape.h  IntAabbShape.h  Shape.h  SphereShape.cc  SphereShape.h
core/ui/: GlyphLoader.cc  GlyphLoader.h  GlyphStyle.cc  (+8 more)
lib/: CMakeLists.txt  README.md  library_implementation.cc  meson.build
server/: CMakeLists.txt  README.md  server_main.cc
shaders/: embed_shader.py  mesh.frag  mesh.vert  meson.build
src/: CMakeLists.txt  api_headers.h  api_headers.hpp  build_config.h.in  client_main.cc  client_main.cpp  library_implementation.cc  meson.build  style_check.sh
types/: CMakeLists.txt  README.md  build_config.h.in
(+436 files in other folders)
